--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -12,6 +12,7 @@ androidx-testExt = "1.3.0"
 composeMultiplatform = "1.9.3"
 junit = "4.13.2"
 kotlin = "2.2.21"
+kotlin-coroutine = "1.10.2"
 koin = "4.1.1"
 startup = "1.2.0"
 precompose = "1.7.0-alpha03"
@@ -30,6 +31,9 @@ androidx-appcompat = { module = "androidx.appcompat:appcompat", version.ref = "a
 androidx-activity-compose = { module = "androidx.activity:activity-compose", version.ref = "androidx-activity" }
 androidx-lifecycle-viewmodelCompose = { module = "org.jetbrains.androidx.lifecycle:lifecycle-viewmodel-compose", version.ref = "androidx-lifecycle" }
 androidx-lifecycle-runtimeCompose = { module = "org.jetbrains.androidx.lifecycle:lifecycle-runtime-compose", version.ref = "androidx-lifecycle" }
+
+# Coroutines
+kotlin-coroutines = {module ="org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref ="kotlin-coroutine"}
 
 # Koin
 koin-android = { module = "io.insert-koin:koin-android", version.ref = "koin" }
